--- a/public/html/planks/expandable-sidebar.html
+++ b/public/html/planks/expandable-sidebar.html
@@ -6,7 +6,8 @@
         <div class='expand-rm-btn-cnt'>
           <button class='expandable-item-rm-btn' ex-list-id='{{id}}' index='{{$index}}'>X</button>
         </div>
-        <div class="expand-header {{type}}" ex-list-id='{{id}}' index='{{$index}}'>
+        <div class="expand-header {{type}} {{$index === activeIndex ? ' active' : ''}}"
+                ex-list-id='{{id}}' index='{{$index}}'>
           {{getHeader(item, $index)}}
         </div>
       </div>
