fixed input and 3d modeling switching contexts properly. also fixed panning.

--- a/public/html/planks-estimate.html
+++ b/public/html/planks-estimate.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div>
+      <input>
       <div id="three-d-model" class="viewer"></div>
     </div>
     <div id='add-cabinet-cnt'></div>
