divide gui working well about to add partition math

--- a/public/html/planks-estimate.html
+++ b/public/html/planks-estimate.html
@@ -13,10 +13,9 @@
     <title>Planks Exstamates</title>
   </head>
   <body>
-    <div>
-      <input>
-      <div id="three-d-model" class="viewer"></div>
+    <div id="three-d-model" class="viewer small">
+      <button id='max-min-btn'>+</button>
     </div>
-    <div id='add-cabinet-cnt'></div>
+    <div id='add-cabinet-cnt' class='large'></div>
   </body>
 </html>
