--- a/public/html/planks/cabinet-head.html
+++ b/public/html/planks/cabinet-head.html
@@ -5,14 +5,14 @@
     <label>W:</label>
     <input class='cabinet-input dem' prop-update='{{$index}}.width' value='{{cabinet.width()}}'>
     <label>H:</label>
-    <input class='cabinet-input dem' prop-update='{{$index}}.height' value='{{cabinet.length()}}'>
+    <input class='cabinet-input dem' prop-update='{{$index}}.length' value='{{cabinet.length()}}'>
     <label>D:</label>
-    <input class='cabinet-input dem' prop-update='{{$index}}.depth' value='{{cabinet.thickness()}}'>
+    <input class='cabinet-input dem' prop-update='{{$index}}.thickness' value='{{cabinet.thickness()}}'>
   </div>
-  H: {{cabinet.openingDemensions().length}}
+  <!-- H: {{cabinet.openingDemensions().length}}
   W: {{cabinet.openingDemensions().width}}
   r: {{cabinet.openingDemensions().overlap.right}}
   l: {{cabinet.openingDemensions().overlap.left}}
   t: {{cabinet.openingDemensions().overlap.top}}
-  b: {{cabinet.openingDemensions().overlap.bottom}}
+  b: {{cabinet.openingDemensions().overlap.bottom}} -->
 </div>
