added control display to 3d model display

--- a/public/html/planks-estimate.html
+++ b/public/html/planks-estimate.html
@@ -10,9 +10,10 @@
     <script type="text/javascript" src='/js/planks-estimate.js'></script>
     <link rel="stylesheet" href="/styles/expandable-list.css">
     <link rel="stylesheet" href="/styles/planks.css">
-    <title>Planks Exstamates</title>
+    <title>Planks Estimate</title>
   </head>
   <body>
+    <div id="model-controller" hidden></div>
     <div id="three-d-model" class="viewer small">
       <button id='max-min-btn'>+</button>
     </div>
