left and right panels correct && added order and room objects with toJson functions for saving

--- a/public/html/planks-estimate.html
+++ b/public/html/planks-estimate.html
@@ -17,6 +17,10 @@
     <div id="three-d-model" class="viewer small">
       <button id='max-min-btn'>+</button>
     </div>
-    <div id='add-cabinet-cnt' class='large'></div>
+    <div>
+      <label>Order Name</label>
+      <input type='text'>
+      <div id='room-pills'></div>
+    </div>
   </body>
 </html>
