seperated out cabinet app code int descrete files

--- a/services/cabinet/public/html/estimate0.html
+++ b/services/cabinet/public/html/estimate0.html
@@ -2,12 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script src="/cabinet/js/3d-modeling/lightgl.js"></script>
-    <script src="/cabinet/js/3d-modeling/csg.js"></script>
-    <script src="/cabinet/js/3d-modeling/viewer.js"></script>
     <script type="text/javascript" src='/js/$t.js'></script>
     <script type="text/javascript" src='/cabinet/js/html-templates.js'></script>
-    <script type="text/javascript" src='/cabinet/js/estimate.js'></script>
+    <script type="text/javascript" src='/cabinet/js/index.js'></script>
     <link rel="stylesheet" href="/cabinet/styles/expandable-list.css">
     <link rel="stylesheet" href="/cabinet/styles/estimate.css">
     <title>Estimate</title>
