saving and loading cabinet working

--- a/services/cabinet/public/html/estimate0.html
+++ b/services/cabinet/public/html/estimate0.html
@@ -11,6 +11,7 @@
     <button id='logout-btn'>Logout</button>
     <div id='login'><div id='login-cnt' class='center-all'></div></div>
     <div id='app'></div>
+    <div id='property-display'></div>
     <div class='tree-d-model-cnt'>
       <div id="model-controller" hidden></div>
       <div id="three-d-model" class="viewer small">
