working on input decision tree... source code is a mess

--- a/services/cabinet/public/html/estimate0.html
+++ b/services/cabinet/public/html/estimate0.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/cabinet/styles/estimate.css">
     <title>Estimate</title>
   </head>
-  <body>
+  <body id='booty'>
     <button id='logout-btn'>Logout</button>
     <div id='login'><div id='login-cnt' class='center-all'></div></div>
     <div id='app' hidden></div>
