--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -2,27 +2,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <script src="/cabinet/js/3d-modeling/lightgl.js"></script>
-    <script src="/cabinet/js/3d-modeling/csg.js"></script>
-    <script src="/cabinet/js/3d-modeling/viewer.js"></script>
-    <script type="text/javascript" src='/js/$t.js'></script>
-    <script type="text/javascript" src='/cabinet/js/html-templates.js'></script>
-    <script type="text/javascript" src='/cabinet/js/estimate.js'></script>
+    <script type="text/javascript" src='/cabinet/js/index.js'></script>
     <link rel="stylesheet" href="/cabinet/styles/expandable-list.css">
     <link rel="stylesheet" href="/cabinet/styles/estimate.css">
     <title>Estimate</title>
   </head>
   <body>
-    <div id='login' hidden><div id='login-cnt' class='center-all'></div></div>
-    <div id='app'>
+    <button id='menu-btn'>&#8801;</button>
+    <div id='menu' hidden>hey hey hey</div>
+    <div id='login'><div id='login-cnt' class='center-all'></div></div>
+    <div id='display-ctn'>
+      <div id='app' name='Orders'></div>
+      <div id='cost-manager' name='Cost Manager'>
+        <div class="center">
+          <h2 id='cost-manager-header'>
+            Cost Manager
+            <button id='cost-manager-save-btn'>Save</button>
+          </h2>
+        </div>
+        <div id="cost-manager-body"></div>
+      </div>
+      <div id='booty'></div>
+      <div id='property-display'></div>
+    </div>
+
+
+    <div class='tree-d-model-cnt'>
       <div id="model-controller" hidden></div>
       <div id="three-d-model" class="viewer small">
         <button id='max-min-btn'>+</button>
-      </div>
-      <div>
-        <label>Order Name</label>
-        <input type='text'>
-        <div id='room-pills'></div>
       </div>
     </div>
   </body>
