--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -22,8 +22,9 @@
         </div>
         <div id="cost-manager-body"></div>
       </div>
-      <div id='booty'></div>
-      <div id='property-display'></div>
+      <div id='template-manager' name='Template Manager'>Temp Man</div>
+      <div id='property-manager' name='Property Manager'>Prop Man</div>
+      <div id='pattern-manager' name='Pattern Manager'>Pat Man</div>
     </div>
 
 
