played around with utility filter and screwed cabinet up

--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src='/cabinet/js/index.js'></script>
     <link rel="stylesheet" href="/cabinet/styles/expandable-list.css">
     <link rel="stylesheet" href="/cabinet/styles/estimate.css">
+    <script src="/js/utility-filter.js" run-type='auto'></script>
     <title>Estimate</title>
   </head>
   <body>
@@ -26,7 +27,6 @@
       <div id='property-manager' name='Property Manager'>Prop Man</div>
       <div id='pattern-manager' name='Pattern Manager'>Pat Man</div>
     </div>
-
 
     <div class='tree-d-model-cnt'>
       <div id="model-controller" hidden></div>
