properties display visually working

--- a/services/cabinet/public/html/estimate.html
+++ b/services/cabinet/public/html/estimate.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <button id='menu-btn'>&#8801;</button>
-    <div id='menu' hidden>hey hey hey</div>
+    <div id='menu' hidden></div>
     <div id='login'><div id='login-cnt' class='center-all'></div></div>
     <div id='display-ctn'>
       <div id='app' name='Orders'></div>
