--- a/public/html/custom-calc.html
+++ b/public/html/custom-calc.html
@@ -15,6 +15,9 @@
       .percision-input {
         max-width: 30pt;
       }
+      .eq-input-elem {
+        max-width: 45pt;
+      }
     </style>
     <title>equations</title>
     <script type="text/javascript">
@@ -48,16 +51,16 @@
         const inputCnt = du.find.closest('.input-cnt', target);
         if (matches) {
           matches = matches.filter(onlyUnique);
-          let repeatHtml = '';
+          let repeatHtml = '<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
           for (let index = 0; index < matches.length; index += 1) {
             const name = matches[index];
             const value = saved[varIndex][name] || 0;
             const div = du.create.element('span');
             const b = du.create.element('b');
             b.innerText = name;
-            div.append(b)
+            div.append(b);
             div.append(du.create.element('input', {class: c, value, name}));
-            repeatHtml += div.outerHTML;
+            repeatHtml += '&nbsp;' + div.outerHTML;
           }
           inputCnt.innerHTML = repeatHtml;
         } else {
@@ -101,7 +104,7 @@
         }
         answers[index] = eval.eval(value);
         evalConnected(index);
-        du.find.closest('.answer-cnt', target).innerHTML = value;
+        du.find.closest('.answer-cnt', target).innerHTML = value + '<br/>';
       }
 
       function variableChange(target) {
